Wprowadzenie logowania i rejestracji

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,36 +8,37 @@
 
     <EditText
         android:id="@+id/editTextUsername"
-        android:layout_width="355dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="20dp"
-        android:hint="Username"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:hint="Podaj email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="338dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="20dp"
-        android:hint="Password"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:hint="Podaj hasło"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
-        style="@style/Widget.Material3.Button"
-        android:layout_width="205dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:backgroundTint="#FFA834"
         android:text="Zaloguj"
+        android:textAllCaps="false"
+        android:background="@drawable/button"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
@@ -45,11 +46,11 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="50dp"
         android:background="@android:color/transparent"
         android:text="Zarejestruj"
+        android:textSize="16sp"
         android:textColor="#FFA834"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,9 +61,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="50dp"
         android:background="@android:color/transparent"
         android:text="Zresetuj hasło"
+        android:textSize="16sp"
         android:textColor="#989EB1"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,9 +74,9 @@
 
     <ImageView
         android:id="@+id/image1"
-        android:layout_width="220dp"
-        android:layout_height="106dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/pizza"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -85,9 +87,8 @@
         android:id="@+id/textView"
         android:layout_width="127dp"
         android:layout_height="33dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/quicksandregular"
         android:text="Logowanie"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -100,7 +101,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/quicksandregular"
         android:text="Email"
@@ -115,7 +116,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/quicksandregular"
         android:text="Hasło"
